[package]

name = "cookie"
version = "0.1.0"
authors = ["Zach Pomerantz <zmp@umich.edu>"]
keywords = ["iron", "web", "cookies"]

[lib]

name = "cookie"
path = "src/lib.rs"

[dependencies]
iron = "*"
rust-crypto = "*"
url = "*"
iron-test = "*"
regex = "*"
hyper = "*"

[dependencies.time]
git = "https://github.com/rust-lang/time"

