[package]

name = "cookie"
version = "0.1.0"
authors = ["Zach Pomerantz <zmp@umich.edu>"]
keywords = ["iron", "web", "cookies"]

[lib]

name = "cookie"
path = "src/lib.rs"

[dependencies]
iron = "*"
rust-crypto = "*"
iron-test = "*"
regex = "*"
hyper = "*"
serde = "*"
serde_json = "*"

[dependencies.time]
git = "https://github.com/rust-lang/time"

[dependencies.url]
git = "https://github.com/servo/rust-url"
features = ["query_encoding"]